<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:paddingTop="15dp"
        android:background="#ddd">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:clickable="true"
                    android:layout_height="fill_parent">

                    <Button
                        android:id="@+id/main_btn_view_patients"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="26dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/view_patients"
                        android:onClick="onButtonClicker"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/btn1"
                        android:textSize="@dimen/text_size_tiny"
                        android:textStyle="normal" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:clickable="true"
                    android:layout_height="fill_parent">

                    <Button
                        android:id="@+id/main_btn_add_patient"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="26dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/add_new"
                        android:onClick="onButtonClicker"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/btn2"
                        android:textSize="@dimen/text_size_tiny"
                        android:textStyle="normal" />




                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:clickable="true"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/main_btn_order"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="26dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/order_medicines"
            android:onClick="onButtonClicker"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/btn3"
            android:textSize="@dimen/text_size_tiny"
            android:textStyle="normal" />

    </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:background="#fff"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:clickable="true"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/main_btn_purchase_history"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="26dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/order_history"
            android:onClick="onButtonClicker"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/btn4"
            android:textSize="@dimen/text_size_tiny"
            android:textStyle="normal" />




    </RelativeLayout>
    </LinearLayout>
    </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:clickable="true"
                    android:layout_height="fill_parent">

                    <Button
                        android:id="@+id/main_btn_order_status"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="26dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/order_status"
                        android:onClick="onButtonClicker"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/btn5"
                        android:textSize="@dimen/text_size_tiny"
                        android:textStyle="normal" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:clickable="true"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/main_btn_track_order"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="26dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/track_order"
                        android:onClick="onButtonClicker"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/btn6"
                        android:textSize="@dimen/text_size_tiny"
                        android:textStyle="normal" />




                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout>